<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="account_action_forget_password">Forgot password</string>
    <string name="account_avatar_crop">Crop</string>
    <string name="account_countdown_simple">%ds</string>
    <string name="account_crop_failed">Problem with cropping the picture</string>
    <string name="account_crop_picture">Crop picture</string>
    <string name="account_error_type_wrong_password">Password must contain 8–20 characters, include a mix of 3 types of numbers, uppercase letters, lowercase letters, and special characters.</string>
    <string name="account_get_verify_code">send code</string>
    <string name="account_label_account">Phone number</string>
    <string name="account_label_password">Password</string>
    <string name="account_login">Log In</string>
    <string name="account_login_failed">log in failed</string>
    <string name="account_logoff">Delete account</string>
    <string name="account_logoff_password_title">Please enter the current account password to confirm your identity</string>
    <string name="account_logoff_warning_confirm">I understand the above information, confirm to delete</string>
    <string name="account_logoff_warning_content">Delete an account is an unrecoverable operation. After delete the account, you will not be able to retrieve all the data belongs to the account (including cloud controller configuration etc.). Before proceeding, please confirm that the content related to the Flydigi account has been properly handled.</string>
    <string name="account_logoff_warning_title">Notice for delete your account</string>
    <string name="account_logout">Logout</string>
    <string name="account_logout_notice">Whether to logout of the current login account?</string>
    <string name="account_nickname_hint">Nickname must be between 4 to 20 characters.</string>
    <string name="account_not_exist">Account not exist</string>
    <string name="account_personal_information">Profile</string>
    <string name="account_personal_information_avatar">Avatar</string>
    <string name="account_personal_information_nickname">Nickname</string>
    <string name="account_phone_email">Phone/Email</string>
    <string name="account_phone_number_not_valid">Phone number is illegal</string>
    <string name="account_please_agree_user_policy" formatted="false">please read and agree to the %s and %s.</string>
    <string name="account_please_input_verify_code">Please enter verification code</string>
    <string name="account_please_select_other_way">Other login options</string>
    <string name="account_please_wait_login">logging in, please wait</string>
    <string name="account_register">Sign up</string>
    <string name="account_register_failed">sign up failed</string>
    <string name="account_resend">Resend</string>
    <string name="account_reset_password">Reset Password</string>
    <string name="account_third_qq_error">QQ is unavailable</string>
    <string name="account_third_wechat_error">Wechat is unavailable</string>
    <string name="account_title_privacy_policy">Privacy Policy</string>
    <string name="account_title_user_agreement">Terms of Service</string>
    <string name="account_upload_failed">Upload failed</string>
    <string name="account_user_agreement_and_policy" formatted="false">agree to the %s and %s.</string>
    <string name="account_verify_code">Verification Code</string>
    <string name="account_verify_code_error">verification code is wrong</string>
    <string name="account_verify_code_has_sent_to">Verification code has been sent to %s</string>
    <string name="account_verify_code_send_failed">verification code send failed</string>
    <string name="account_was_exist">Account was exist</string>
    <string name="action_cancel">Cancel</string>
    <string name="activity_crash_log">Crash Capture</string>
    <string name="activity_dump_log">Log Capture</string>
    <string name="activity_usb_ota_demo">USB OTA Demo</string>
    <string name="activity_usb_ota_tools">USB OTA Tools</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="agentweb_coming_soon_download">Coming soon to download the file</string>
    <string name="agentweb_current_downloading_progress">Downloading:%s</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
    <string name="agentweb_error">Network is unavailable, Please check it</string>
    <string name="agentweb_file_chooser">Files</string>
    <string name="agentweb_file_download">Download</string>
    <string name="app_feizhi_offical_site">Flydigi Official Website</string>
    <string name="app_feizhi_offical_weibo">飞智Flydigi</string>
    <string name="app_name">Flydigi Game Center</string>
    <string name="app_title_disclaimer">Disclaimer</string>
    <string name="app_weibo">Weibo</string>
    <string name="community_wechat_number">Wechat Official Account</string>
    <string name="device_action_cast_assistant">Screencast assist</string>
    <string name="device_action_cast_assistant_desc">After enable it the button mapping will based on the Cast Screen.</string>
    <string name="device_action_driver_compatible">Use compatible driver</string>
    <string name="device_action_driver_compatible_desc">Use compatible driver</string>
    <string name="device_action_hide_float_view">Hide float View</string>
    <string name="device_action_hide_float_view_desc">Hide float View and Mapping guide in Game</string>
    <string name="device_action_pad_support">Tablet Support</string>
    <string name="device_action_pad_support_desc">If the mapping is in the wrong direction, Please turn this setting on/off</string>
    <string name="device_action_title_pubg_native_support">和平精英原生改键</string>
    <string name="device_clear_game_cache_and_config">Clear the caches and configs</string>
    <string name="device_hint_for_open_app_stats_usage">Start games directly from desktop after authorizing</string>
    <string name="device_open_app_stats_usage">Apps usage access</string>
    <string name="device_open_usb_debugging">Enable USB Debugging</string>
    <string name="device_quit_keymapping">Quit Keymapping</string>
    <string name="device_quit_need_reactive">It needs to be reactivated after exiting</string>
    <string name="device_reset_game_center">Reset</string>
    <string name="device_save_config_to_flash">Save Configuration</string>
    <string name="device_save_config_to_flash_notice">Config will not be lost when the gamapad is OFF</string>
    <string name="device_setting_quit_alpha_group">Exit group</string>
    <string name="device_this_is_must_step_active_keymapping">Key step to activate mapping</string>
    <string name="floatview_faster">SLW</string>
    <string name="floatview_fps_assist_shoot_control_by_motion">Enable Motion Sensing</string>
    <string name="floatview_fps_assist_shoot_level">Auxiliary Shoot level</string>
    <string name="floatview_fps_assist_shoot_mode">Auxiliary Shoot Start Method</string>
    <string name="floatview_fps_assist_shoot_trigger_mode_gamepad">Press the button to start</string>
    <string name="floatview_fps_assist_shoot_trigger_mode_touchscreen">Touch screen to start</string>
    <string name="floatview_horizontal_sensitivity">Vertical Sensitivity</string>
    <string name="floatview_horizontal_sensitivity_motion">Horizontal sensitivity of motion sensing</string>
    <string name="floatview_horizontal_sensitivity_right_joystick">Horizontal sensitivity of right stick</string>
    <string name="floatview_larger">BIG</string>
    <string name="floatview_property_key_fly_mouse_desc_gamepad">After turning on the flying mouse, RT is the OK button, and the pointer can be controlled by motion sensing or the right joystick.</string>
    <string name="floatview_property_key_fly_mouse_trigger_mode_click">click to open</string>
    <string name="floatview_property_key_fly_mouse_trigger_mode_pressing">Press and hold to turn on</string>
    <string name="floatview_property_key_fps_assist_shoot_desc">Auxiliary shooting will help you shot more accurately, it will swipe downward when you shoot to reduce recoil. The higher Auxiliary Shooting level you set, the more it swipe downward.</string>
    <string name="floatview_property_macro_key_moba_left_joystick_exclusive_desc">When the left stick is selected for exclusive use, only the skill direction will be controlled when the left stick is moved, and the character will not be moved.</string>
    <string name="floatview_property_right_joystick_linkage">Right Stick Linkage</string>
    <string name="floatview_radius">Radius</string>
    <string name="floatview_reverse">Reverse</string>
    <string name="floatview_slower">QCK</string>
    <string name="floatview_smaller">SML</string>
    <string name="floatview_trigger_mode">Trigger mode</string>
    <string name="floatview_vertical_sensitivity">Horizontal Sensitivity</string>
    <string name="floatview_vertical_sensitivity_motion">Horizontal sensitivity of motion sensing</string>
    <string name="floatview_vertical_sensitivity_right_joystick">Vertical sensitivity of right stick</string>
    <string name="floatview_vibrate_duration">Vibration duration</string>
    <string name="floatview_vibrate_key">Vibration trigger button</string>
    <string name="floatview_vibrate_key_trigger_mode_click">Press to trigger</string>
    <string name="floatview_vibrate_key_trigger_mode_press">Hold to trigger</string>
    <string name="floatview_vibrate_level">Vibration intensity</string>
    <string name="floatview_vibrate_side">Vibration position</string>
    <string name="floatview_vibrate_side_both">Both side</string>
    <string name="floatview_vibrate_side_left">Left side</string>
    <string name="floatview_vibrate_side_right">Right side</string>
</resources>