<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.flydigi.base.widget.DividerPaddingLinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/base_view_divider"
            android:showDividers="middle"
            android:dividerPadding="20dp">
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/action_pubg_native_support_mode"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_title="@string/device_action_title_pubg_native_support"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/action_write_config_to_flash"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_desc="@string/device_save_config_to_flash_notice"
                app:aiv_title="@string/device_save_config_to_flash"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/action_open_usb_debug"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_desc="@string/device_this_is_must_step_active_keymapping"
                app:aiv_title="@string/device_open_usb_debugging"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/action_open_app_stats_usage"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_desc="@string/device_hint_for_open_app_stats_usage"
                app:aiv_title="@string/device_open_app_stats_usage"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/action_quit_key_mapping"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_desc="@string/device_quit_need_reactive"
                app:aiv_title="@string/device_quit_keymapping"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/action_rest_game_center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_desc="@string/device_clear_game_cache_and_config"
                app:aiv_title="@string/device_reset_game_center"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/action_quit_alpha_group"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_title="@string/device_setting_quit_alpha_group"/>
            <com.flydigi.base.widget.action_item.ActionItemSwitch
                android:id="@+id/action_hide_float_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_desc="@string/device_action_hide_float_view_desc"
                app:aiv_title="@string/device_action_hide_float_view"/>
            <com.flydigi.base.widget.action_item.ActionItemSwitch
                android:id="@+id/action_pad_support"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_desc="@string/device_action_pad_support_desc"
                app:aiv_title="@string/device_action_pad_support"/>
            <com.flydigi.base.widget.action_item.ActionItemSwitch
                android:id="@+id/action_cast_assist"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_desc="@string/device_action_cast_assistant_desc"
                app:aiv_title="@string/device_action_cast_assistant"/>
            <com.flydigi.base.widget.action_item.ActionItemSwitch
                android:id="@+id/action_driver_compatible"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_60"
                app:aiv_desc="@string/device_action_driver_compatible_desc"
                app:aiv_title="@string/device_action_driver_compatible"/>
        </com.flydigi.base.widget.DividerPaddingLinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
