<?xml version="1.0" encoding="utf-8"?>
<com.flydigi.float_view.widget.PropertyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/qb_px_24"
    android:paddingTop="@dimen/qb_px_8"
    android:paddingRight="@dimen/qb_px_24"
    android:paddingBottom="@dimen/qb_px_8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/floatview_shape_divider"
    android:showDividers="middle">
    <com.flydigi.float_view.widget.FloatViewTwoCheckBoxView
        android:id="@+id/tcb_trigger_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatview_tcb_checkbox_1_default="true"
        app:floatview_tcb_checkbox_mode_single="true"
        app:floatview_tcb_checkbox_name_1="@string/floatview_property_key_fly_mouse_trigger_mode_click"
        app:floatview_tcb_checkbox_name_2="@string/floatview_property_key_fly_mouse_trigger_mode_pressing"
        app:floatview_tcb_show_title="true"
        app:floatview_tcb_title="@string/floatview_trigger_mode"/>
    <com.flydigi.float_view.widget.FloatViewTwoSeekBarView
        android:id="@+id/tsb_fly_mouse"
        android:layout_width="@dimen/qb_px_320"
        android:layout_height="wrap_content"
        app:floatview_tsb_hint_max_down="@string/floatview_slower"
        app:floatview_tsb_hint_max_up="@string/floatview_slower"
        app:floatview_tsb_hint_min_down="@string/floatview_faster"
        app:floatview_tsb_hint_min_up="@string/floatview_faster"
        app:floatview_tsb_name_down="@string/floatview_horizontal_sensitivity"
        app:floatview_tsb_name_up="@string/floatview_vertical_sensitivity"
        app:floatview_tsb_show_hint_down="true"
        app:floatview_tsb_show_hint_up="true"
        app:floatview_tsb_value_down_default="15"
        app:floatview_tsb_value_up_default="20"/>
    <com.flydigi.float_view.widget.FloatViewTwoSeekBarView
        android:id="@+id/tsb_fly_mouse_right_joystick"
        android:layout_width="@dimen/qb_px_320"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_12"
        app:floatview_tsb_hint_max_down="@string/floatview_slower"
        app:floatview_tsb_hint_max_up="@string/floatview_slower"
        app:floatview_tsb_hint_min_down="@string/floatview_faster"
        app:floatview_tsb_hint_min_up="@string/floatview_faster"
        app:floatview_tsb_name_down="@string/floatview_vertical_sensitivity_right_joystick"
        app:floatview_tsb_name_up="@string/floatview_horizontal_sensitivity_right_joystick"
        app:floatview_tsb_show_hint_down="true"
        app:floatview_tsb_show_hint_up="true"
        app:floatview_tsb_show_title="true"
        app:floatview_tsb_title="@string/floatview_property_right_joystick_linkage"
        app:floatview_tsb_value_down_default="20"
        app:floatview_tsb_value_up_default="40"/>
    <com.flydigi.float_view.widget.FloatViewPropertyIntroductionView
        android:id="@+id/introduction_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_12"
        app:floatview_piv_desc="@string/floatview_property_key_fly_mouse_desc_gamepad"/>
</com.flydigi.float_view.widget.PropertyLinearLayout>
