<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_128"
            android:src="@drawable/main_ic_big_logo"
            android:scaleType="center"/>
        <com.flydigi.base.widget.DividerPaddingLinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/base_view_divider"
            android:showDividers="middle"
            android:dividerPadding="20dp">
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/ov_wechat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_44"
                app:actionText="@string/app_name"
                app:aiv_title="@string/community_wechat_number"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/ov_weibo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_44"
                app:actionText="@string/app_feizhi_offical_weibo"
                app:aiv_title="@string/app_weibo"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/ov_official_site"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_44"
                app:actionText="https://www.flydigi.com"
                app:aiv_title="@string/app_feizhi_offical_site"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/ov_disclaimer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_44"
                app:aiv_title="@string/app_title_disclaimer"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/ov_user_agreement"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_44"
                app:aiv_title="@string/account_title_user_agreement"/>
            <com.flydigi.base.widget.action_item.ActionItemNormal
                android:id="@+id/ov_user_privacy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_44"
                app:aiv_title="@string/account_title_privacy_policy"/>
        </com.flydigi.base.widget.DividerPaddingLinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
