<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/qb_px_24"
    android:paddingTop="@dimen/qb_px_8"
    android:paddingRight="@dimen/qb_px_24"
    android:paddingBottom="@dimen/qb_px_8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.flydigi.float_view.widget.FloatViewKeySetView
        android:id="@+id/ksv_key"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:floatview_ksv_title="@string/floatview_vibrate_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.flydigi.base.widget.DividerPaddingLinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/qb_px_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ksv_key"
        app:layout_constraintTop_toTopOf="@+id/ksv_key">
        <com.flydigi.float_view.widget.FloatViewTwoCheckBoxView
            android:id="@+id/tcb_trigger_mode"
            android:layout_width="@dimen/qb_px_360"
            android:layout_height="wrap_content"
            app:floatview_tcb_checkbox_1_default="true"
            app:floatview_tcb_checkbox_2_default="false"
            app:floatview_tcb_checkbox_mode_single="true"
            app:floatview_tcb_checkbox_name_1="@string/floatview_vibrate_key_trigger_mode_click"
            app:floatview_tcb_checkbox_name_2="@string/floatview_vibrate_key_trigger_mode_press"
            app:floatview_tcb_inline="true"
            app:floatview_tcb_show_title="true"
            app:floatview_tcb_title="@string/floatview_trigger_mode"/>
        <com.flydigi.float_view.widget.FloatViewSingleSeekBarView
            android:id="@+id/ssb_level"
            android:layout_width="@dimen/qb_px_360"
            android:layout_height="wrap_content"
            app:floatview_ssb_inline="true"
            app:floatview_ssb_name="@string/floatview_vibrate_level"
            app:floatview_ssb_show_unit="true"
            app:floatview_ssb_unit="1"
            app:floatview_ssb_unit_inside="true"
            app:floatview_ssb_unit_name="%"
            app:floatview_ssb_unit_type="PERCENT"
            app:floatview_ssb_value_format="0"
            app:floatview_ssb_value_max="255"
            app:floatview_ssb_value_min="0"/>
        <com.flydigi.float_view.widget.FloatViewSingleSeekBarView
            android:id="@+id/ssb_duration"
            android:layout_width="@dimen/qb_px_360"
            android:layout_height="wrap_content"
            app:floatview_ssb_inline="true"
            app:floatview_ssb_name="@string/floatview_vibrate_duration"
            app:floatview_ssb_show_unit="true"
            app:floatview_ssb_unit="0.01"
            app:floatview_ssb_unit_inside="true"
            app:floatview_ssb_unit_name="s"
            app:floatview_ssb_unit_type="TIME_SECOND"
            app:floatview_ssb_value_format="3"
            app:floatview_ssb_value_max="255"
            app:floatview_ssb_value_min="0"/>
        <com.flydigi.float_view.widget.FloatViewThreeCheckBoxView
            android:id="@+id/tcb_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/qb_px_360"
            app:floatview_mcb_checkbox_1_default="true"
            app:floatview_mcb_checkbox_mode_single="true"
            app:floatview_mcb_checkbox_name_1="@string/floatview_vibrate_side_both"
            app:floatview_mcb_checkbox_name_2="@string/floatview_vibrate_side_left"
            app:floatview_mcb_checkbox_name_3="@string/floatview_vibrate_side_right"
            app:floatview_mcb_inline="true"
            app:floatview_mcb_show_title="true"
            app:floatview_mcb_title="@string/floatview_vibrate_side"/>
    </com.flydigi.base.widget.DividerPaddingLinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
