<?xml version="1.0" encoding="utf-8"?>
<com.flydigi.float_view.widget.PropertyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/qb_px_24"
    android:paddingTop="@dimen/qb_px_8"
    android:paddingRight="@dimen/qb_px_24"
    android:paddingBottom="@dimen/qb_px_8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/floatview_shape_divider"
    android:showDividers="middle">
    <com.flydigi.float_view.widget.FloatViewSingleSeekBarView
        android:id="@+id/ssb_radius"
        android:layout_width="@dimen/qb_px_320"
        android:layout_height="wrap_content"
        app:floatview_ssb_hint_max="@string/floatview_larger"
        app:floatview_ssb_hint_min="@string/floatview_smaller"
        app:floatview_ssb_name="@string/floatview_radius"
        app:floatview_ssb_show_hint="true"
        app:floatview_ssb_value_default="50"
        app:floatview_ssb_value_max="127"/>
    <com.flydigi.float_view.widget.FloatViewSingleCheckBoxView
        android:id="@+id/scb_joystick_reverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatview_scb_checkbox_name="@string/floatview_reverse"/>
    <com.flydigi.float_view.widget.FloatViewPropertyIntroductionView
        android:id="@+id/introduction_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatview_piv_desc="@string/floatview_property_macro_key_moba_left_joystick_exclusive_desc"/>
</com.flydigi.float_view.widget.PropertyLinearLayout>
