<?xml version="1.0" encoding="utf-8"?>
<com.flydigi.float_view.widget.PropertyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/qb_px_24"
    android:paddingTop="@dimen/qb_px_8"
    android:paddingRight="@dimen/qb_px_24"
    android:paddingBottom="@dimen/qb_px_8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/floatview_shape_divider"
    android:showDividers="middle">
    <com.flydigi.float_view.widget.FloatViewTwoCheckBoxView
        android:id="@+id/tcb_trigger_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatview_tcb_checkbox_1_default="true"
        app:floatview_tcb_checkbox_2_default="false"
        app:floatview_tcb_checkbox_mode_single="true"
        app:floatview_tcb_checkbox_name_1="@string/floatview_fps_assist_shoot_trigger_mode_touchscreen"
        app:floatview_tcb_checkbox_name_2="@string/floatview_fps_assist_shoot_trigger_mode_gamepad"
        app:floatview_tcb_show_title="true"
        app:floatview_tcb_show_title_help="true"
        app:floatview_tcb_title="@string/floatview_fps_assist_shoot_mode"/>
    <com.flydigi.float_view.widget.FloatViewSingleSeekBarView
        android:id="@+id/ssb_assist_shoot"
        android:layout_width="@dimen/qb_px_320"
        android:layout_height="wrap_content"
        app:floatview_ssb_hint_max="@string/floatview_slower"
        app:floatview_ssb_hint_min="@string/floatview_faster"
        app:floatview_ssb_name="@string/floatview_fps_assist_shoot_level"
        app:floatview_ssb_show_hint="true"
        app:floatview_ssb_show_name_help="true"
        app:floatview_ssb_value_default="10"
        app:floatview_ssb_value_max="40"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/area_float_fps_assist_shoot_motion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.flydigi.float_view.widget.FloatViewSingleCheckBoxView
            android:id="@+id/scb_motion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:floatview_scb_checkbox_name="@string/floatview_fps_assist_shoot_control_by_motion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.flydigi.float_view.widget.FloatViewTwoSeekBarView
            android:id="@+id/tsb_motion_sens"
            android:layout_width="@dimen/qb_px_320"
            android:layout_height="wrap_content"
            app:floatview_tsb_hint_max_down="@string/floatview_slower"
            app:floatview_tsb_hint_max_up="@string/floatview_slower"
            app:floatview_tsb_hint_min_down="@string/floatview_faster"
            app:floatview_tsb_hint_min_up="@string/floatview_faster"
            app:floatview_tsb_name_down="@string/floatview_vertical_sensitivity_motion"
            app:floatview_tsb_name_up="@string/floatview_horizontal_sensitivity_motion"
            app:floatview_tsb_show_hint_down="true"
            app:floatview_tsb_show_hint_up="true"
            app:floatview_tsb_value_down_default="30"
            app:floatview_tsb_value_down_max="127"
            app:floatview_tsb_value_up_default="30"
            app:floatview_tsb_value_up_max="127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scb_motion"/>
        <View
            android:id="@+id/area_float_fps_assist_shoot_motion_mask_1"
            android:background="#e6232325"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/scb_motion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scb_motion"/>
        <View
            android:id="@+id/area_float_fps_assist_shoot_motion_mask_2"
            android:background="#e6232325"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tsb_motion_sens"
            app:layout_constraintEnd_toEndOf="@+id/tsb_motion_sens"
            app:layout_constraintStart_toStartOf="@+id/tsb_motion_sens"
            app:layout_constraintTop_toTopOf="@+id/tsb_motion_sens"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.flydigi.float_view.widget.FloatViewPropertyIntroductionView
        android:id="@+id/introduction_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatview_piv_desc="@string/floatview_property_key_fps_assist_shoot_desc"/>
</com.flydigi.float_view.widget.PropertyLinearLayout>
